tests/fail/sovereign_shape.stderr
error[E0105]: Parse error: Expected '(' or '[' after shape name
 --> tests/fail/sovereign_shape.tk:14:16
   |
 14 | shape Resource {
   |                ^
